--- a/boardSound/app/src/main/res/layout/activity_main.xml
+++ b/boardSound/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,18 @@
         android:layout_height="47dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
-        android:text="@string/btnCreate"
+        android:text="@string/btnTest"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnTest2"
+        android:layout_width="109dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/btnTest2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -25,4 +35,15 @@
         android:text="Stop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="268dp"
+        android:layout_height="72dp"
+        android:layout_marginBottom="144dp"
+        android:layout_marginEnd="56dp"
+        android:text="Test sounds from the sound buttons. Stop sound from the stop button. If sounds overlap, restart application. Longpress for optional remove of the buttons."
+        app:layout_constraintBottom_toTopOf="@+id/btnStop"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
